--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-slate
+title: Sediment traps with guiding channel and hybrid check dams improve controlled sediment retention
+description: Data and codes
+show_downloads: true
